# monado

./: .clang-tidy  .cmake-format.py  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CompilerFlags.cmake  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  meson.build  meson_options.txt  settings.gradle  vcpkg.json  vcpkg.json.license
doc/: CHANGELOG.md  CMakeLists.txt  Doxyfile.in  Doxyfile.meson.in  Doxyfile.meson_in  conventions.md  design-spaces.md  frame-pacing.md  frame-timing.md  hand-tracking-mercury.md  header.html  howto-release.md  howto-remote-driver.md  implementing-extensions.md  ipc-design.md  ipc.md  mainpage.md  meson.build  metrics.md  roadmap.md  targets.md  tracing-perfetto.md  tracing-tracy.md  tracing.md  understanding-targets.md  vulkan-extensions.md  winbuild.md  writing-a-new-driver.md  writing-driver.md
doc/changes/: .markdownlint.yaml  .proclamation.json  .proclamation.json.license  README.md
doc/changes/aux/: mr.255.2.md  mr.255.md  mr.266.2.md  mr.266.4.md  mr.278.md  mr.282.md
doc/changes/auxiliary/: mr.1005.md  mr.1016.md  mr.1017.md  mr.1060.md  mr.1067.md  mr.1081.md  mr.1128.md  mr.1142.1.md  mr.1142.2.md  mr.1152.md  mr.1166.md  mr.1171.md  mr.1172.md  mr.1265.md  mr.1270.1.md  mr.1270.2.md  mr.1271.1.md  mr.1271.2.md  mr.1271.3.md  mr.1271.4.md  mr.1291.md  mr.1320.md  mr.1328.md  mr.1334.md  mr.1404.md  mr.1475.md  mr.1512.md  mr.1584.md  mr.1585.md  mr.1590.md  mr.1748.1.md  mr.1748.2.md  mr.1763.md  mr.1766.1.md  mr.1766.2.md  mr.1792.1.md  mr.1792.2.md  mr.1792.3.md  mr.1796.md  mr.1801.1.md  (+96 more)
doc/changes/big/: mr.1576.md  mr.1896.md  mr.295.md  mr.306.md  mr.408.md  mr.583.md  mr.774.md  mr.873.md
doc/changes/compositor/: mr.1117.md  mr.1119.md  mr.1120.md  mr.1142.1.md  mr.1142.2.md  mr.1268.1.md  mr.1268.2.md  mr.1268.3.md  mr.1269.md  mr.1270.md  mr.1271.md  mr.1316.md  mr.1319.md  mr.1340.md  mr.1352.md  mr.1421.md  mr.1465.2.md  mr.1465.md  mr.1570.md  mr.1742.md  mr.1748.1.md  mr.1748.2.md  mr.1748.3.md  mr.1750.md  mr.1751.md  mr.1763.1.md  mr.1763.2.md  mr.1801.1.md  mr.1801.2.md  mr.1801.3.md  mr.1801.4.md  mr.1801.5.md  mr.1820.1.md  mr.1820.2.md  mr.1824.1.md  mr.1824.2.md  mr.1824.3.md  mr.1868.md  mr.1877.1.md  mr.1877.2.md  (+74 more)
doc/changes/doc/: mr.1872.md  mr.1878.md  mr.1883.md  mr.1891.md
doc/changes/drivers/: mr.1035.md  mr.1264.md  mr.1265.md  mr.1291.md  mr.1334.md  mr.1356.md  mr.1447.md  mr.1494.md  mr.1692.md  mr.1754.md  mr.1769.md  mr.1770.md  mr.1829.1.md  mr.1829.2.md  mr.1831.md  mr.1858.md  mr.1860.1.md  mr.1860.2.md  mr.1860.md  mr.1861.md  mr.1876.md  mr.1881.md  mr.1893.md  mr.1911.2.md  mr.1912.md  mr.242.md  mr.249.md  mr.251.md  mr.255.md  mr.266.md  mr.281.md  mr.282.md  mr.287.md  mr.288.md  mr.359.md  mr.405.md  mr.406.md  mr.417.md  mr.418.md  mr.474.md  (+38 more)
doc/changes/ipc/: mr.1213.md  mr.1408.md  mr.1525.md  mr.1875.md  mr.1901.md  mr.1906.1.md  mr.1906.2.md  mr.1906.3.md  mr.1909.1.md  mr.1909.2.md  mr.1909.3.md  mr.359.1.md  mr.359.2.md  mr.369.md  mr.413.md  mr.444.1.md  mr.444.2.md  mr.461.md  mr.478.1.md  mr.478.2.md  mr.491.md  mr.493.md  mr.511.md  mr.565.md  mr.601.md  mr.622.md  mr.685.md  mr.694.md  mr.712.md  mr.721.md  mr.768.md
doc/changes/misc_features/: mr.1074.md  mr.1290.md  mr.1875.md  mr.1900.md  mr.233.md  mr.242.2.md  mr.242.md  mr.245.md  mr.249.2.md  mr.249.md  mr.252.2.md  mr.252.md  mr.284.md  mr.292.md  mr.330.md  mr.421.md  mr.429.md  mr.551.md  mr.574.md  mr.592.md  mr.676.md  mr.692.md  mr.695.md  mr.697.1.md  mr.697.2.md  mr.705.md  mr.715.md  mr.739.md  mr.785.md  mr.809.md  mr.858.1.md  mr.984.md
doc/changes/misc_fixes/: issue.65.md  mr.1262.1.md  mr.1262.2.md  mr.1262.md  mr.1396.md  mr.1561.md  mr.1816.md  mr.1861.md  mr.1869.md  mr.1871.md  mr.1886.md  mr.1890.md  mr.1909.md  mr.230.md  mr.247.md  mr.249.md  mr.253.md  mr.258.md  mr.264.md  mr.265.md  mr.268.md  mr.284.2.md  mr.284.md  mr.314.md  mr.327.md  mr.348.md  mr.349.md  mr.4.md  mr.600.1.md  mr.735.md  mr.737.md  mr.785.md  mr.810.md  mr.963.md
doc/changes/state_trackers/: issue.63.md  mr.1074.1.md  mr.1074.2.md  mr.1120.md  mr.1126.md  mr.1144.md  mr.1166.1.md  mr.1166.2.md  mr.1166.3.md  mr.1312.md  mr.1353.md  mr.1355.md  mr.1356.1.md  mr.1356.2.md  mr.1399.md  mr.1743.md  mr.1785.1.md  mr.1785.2.md  mr.1796.1.md  mr.1796.2.md  mr.1805.md  mr.1808.md  mr.1814.md  mr.1827.md  mr.1836.md  mr.1865.md  mr.1880.md  mr.1890.md  mr.1896.1.md  mr.1896.2.md  mr.1899.md  mr.1901.md  mr.1902.1.md  mr.1902.2.md  mr.1903.md  mr.1904.md  mr.1915.md  mr.234.md  mr.261.md  mr.266.1.md  (+85 more)
doc/changes/tracking/: .gitignore  mr.1381.md  mr.1893.1.md  mr.1893.2.md  mr.1893.3.md  mr.1893.4.md
doc/changes/xrt/: mr.1054.md  mr.1092.md  mr.1105.md  mr.1147.md  (+90 more)
doc/example_configs/: calibration_v2.example.json  calibration_v2.example.json.license  calibration_v2.schema.json  config_v0.json.northstar_lonestar  config_v0.json.northstar_lonestar.license  config_v0.northstar_lonestar.json  config_v0.schema.json
doc/images/: in-process.drawio  out-of-proc.drawio  out-of-proc.drawio.svg.license
src/: CMakeLists.txt  meson.build  targets_enabled_drivers.h.cmake_in  targets_enabled_drivers.h.meson_in
src/xrt/: .clang-format  CMakeLists.txt  meson.build
tests/: .clang-format  CMakeLists.txt  aux_d3d_dxgi_formats.hpp  meson.build  tests_aux_d3d.cpp  tests_aux_d3d_d3d11.cpp  tests_comp_client_d3d11.cpp  tests_comp_client_d3d12.cpp  tests_comp_client_opengl.cpp  tests_comp_client_vulkan.cpp  tests_cxx_wrappers.cpp  tests_deque.cpp  tests_generic_callbacks.cpp  tests_history_buf.cpp  tests_id_ringbuffer.cpp  tests_input_transform.cpp  tests_json.cpp  tests_levenbergmarquardt.cpp  tests_lowpass.cpp  tests_lowpass_float.cpp  tests_lowpass_int.cpp  tests_lowpass_integer.cpp  tests_main.cpp  tests_maths.cpp  tests_pacing.cpp  tests_pose.cpp  tests_quat_change_of_basis.cpp  tests_quat_swing_twist.cpp  tests_quatexpmap.cpp  tests_rational.cpp  tests_relation_chain.cpp  tests_vec3_angle.cpp  tests_vector.cpp  tests_worker.cpp  time_utils.hpp  vktest_init_bundle.hpp
(+1312 files in other folders)
